--- a/docs/styles/four_leaf_clover.module.css
+++ b/docs/styles/four_leaf_clover.module.css
@@ -1,3 +1,100 @@
-.redText {
-  color: red;
+.fourLeafClover {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(2, 90px);
+  grid-template-rows: repeat(2, 90px);
+}
+
+.leaf {
+  background-color: #ffffff;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  color: #000000;
+}
+
+.icon {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  vertical-align: middle;
+  display: inline-block;
+  font-size: 24px;
+  margin-top: 0.4em;
+  margin-left: 0.4em;
+  transition: all 0.3s ease-in-out;
+}
+
+.leaf:hover {
+  background-color: #f0f0f0;
+  transform: scale(1.05);
+}
+
+.leaf:nth-child(1) {
+  border-top-left-radius: 90px;
+}
+
+.leaf:nth-child(1) .icon {
+  margin-bottom: -0.3em;
+  margin-right: -0.3em;
+  color: #cc39a4;
+}
+
+.leaf:nth-child(1):hover {
+  background-color: #cc39a4;
+}
+
+.leaf:nth-child(2) {
+  border-top-right-radius: 90px;
+}
+
+.leaf:nth-child(2) .icon {
+  margin-bottom: -0.4em;
+  margin-left: -0.4em;
+  color: #1877f2;
+}
+
+.leaf:nth-child(2):hover {
+  background-color: #1877f2;
+}
+
+.leaf:nth-child(3) {
+  border-bottom-left-radius: 90px;
+}
+
+.leaf:nth-child(3) .icon {
+  margin-top: -0.1em;
+  margin-right: -0.4em;
+  color: #00ff00;
+}
+
+.leaf:nth-child(3):hover {
+  background-color: #00ff00;
+}
+
+.leaf:nth-child(4) {
+  border-bottom-right-radius: 90px;
+}
+
+.leaf:nth-child(4) .icon {
+  margin-bottom: 0.4em;
+  margin-right: 0.4em;
+  color: #ff0004;
+}
+
+.leaf:nth-child(4):hover {
+  background-color: #ff0004;
+}
+
+.leaf:nth-child(1):hover .icon,
+.leaf:nth-child(2):hover .icon,
+.leaf:nth-child(3):hover .icon,
+.leaf:nth-child(4):hover .icon {
+  color: #ffffff;
 }
