--- a/docs/styles/audio_player.css
+++ b/docs/styles/audio_player.css
@@ -24,3 +24,8 @@
 .left-btn:not(:first-child) {
   margin-left: 15px;
 }
+.audio-cover {
+  width: 60px;
+  height: 60px;
+  margin: 0 15px 0 20px;
+}
